# spotify-downloader

./: .dockerignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  objects.inv  release-0.1.0.md  release-0.2.0.md  release-0.2.1.md  release-0.2.5.md  release-0.2.7.md  release-0.2.8.md  release-0.2.9.md  sitemap.xml  updater.json  v0.2.6.md  v0.2.8.md  wrapped-test-plugin.js
.github/workflows/: build-docs.yml  publish.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
installation/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/console/: index.html
reference/download/: index.html
reference/providers/: index.html
reference/types/: index.html
reference/utils/: index.html
reference/web/: index.html
scratch/: check_diff.py  check_minisign.py  check_nav.py  check_plugin_cards.py  check_plugins_js.py  check_scripts.py  check_settings_html.py  check_settings_inputs.py  check_view_plugins.py  check_views.py  check_wrapped_import.py  check_wrapped_scope.py  search_spoti.py
search/: search_index.json
tauri-gui/: .gitignore  README.md  build_binaries.py  package-lock.json  package.json
tauri-gui/scripts/: embed_metadata.py  spotify_query.py
tauri-gui/src/: art.js  index.html  main.js  playlists.js  styles.css
tauri-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-gui/src-tauri/capabilities/: default.json
tauri-gui/src-tauri/icons/: icon.icns
tauri-gui/src-tauri/src/: lib.rs  main.rs  ytmusic_search.py
troubleshooting/: index.html
usage/: index.html
(+86 files in other folders)
